objects/ASI_eForm_CC_Request__c.object
<CustomObject>
    <description>Congratulatory &amp; Condolatory Requests</description>
    <fields>
        <fullName>ASI_eForm_Amount__c</fullName>
        <label>Total Payment Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Approval_date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Beneficiary__c</fullName>
        <description>Beneficiary</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c + &apos; &apos; +  ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beneficiary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_CC_Total_Payment_Amount2__c</fullName>
        <formula>ASI_eForm_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KRW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Days__c</fullName>
        <label>No. of days</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_Sub_Type__c</fullName>
        <description>Leave Sub-Type</description>
        <label>Leave Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Leave_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>본인결혼(초혼&amp;재혼) ,500000원+6일</fullName>
                </value>
                <value>
                    <fullName>자녀결혼  ,500000원+1일</fullName>
                </value>
                <value>
                    <fullName>본인 형제/자매 결혼  ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>배우자 형제/자매 결혼 ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>자녀 출산 ,200000원+3일</fullName>
                </value>
                <value>
                    <fullName>본인부 회갑 ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>본인모 회갑 ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>배우자부 회갑 ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>배우자모 회갑 ,300000원+1일</fullName>
                </value>
                <value>
                    <fullName>본인부 고희 ,400000원+2일</fullName>
                </value>
                <value>
                    <fullName>본인모 고희 ,400000원+2일</fullName>
                </value>
                <value>
                    <fullName>배우자부 고희 ,400000원+2일</fullName>
                </value>
                <value>
                    <fullName>배우자모 고희 ,400000원+2일</fullName>
                </value>
                <value>
                    <fullName>본인 사망 ,5000000원</fullName>
                </value>
                <value>
                    <fullName>배우자 사망 ,3000000원+7일</fullName>
                </value>
                <value>
                    <fullName>자녀 사망 ,1000000원+5일</fullName>
                </value>
                <value>
                    <fullName>본인 부사망 ,800000원+5일</fullName>
                </value>
                <value>
                    <fullName>본인 모사망 ,800000원+5일</fullName>
                </value>
                <value>
                    <fullName>배우자 부 사망 ,800000원+5일</fullName>
                </value>
                <value>
                    <fullName>배우자 모 사망 ,800000원+5일</fullName>
                </value>
                <value>
                    <fullName>본인조부사망 ,300000원+3일</fullName>
                </value>
                <value>
                    <fullName>본인조모사망 ,300000원+3일</fullName>
                </value>
                <value>
                    <fullName>배우자조부사망 ,300000원+3일</fullName>
                </value>
                <value>
                    <fullName>배우자조모사망 ,300000원+3일</fullName>
                </value>
                <value>
                    <fullName>본인 외조부사망 ,100000원+3일</fullName>
                </value>
                <value>
                    <fullName>본인 외조모사망 ,100000원+3일</fullName>
                </value>
                <value>
                    <fullName>배우자외조부사망 ,100000원+3일</fullName>
                </value>
                <value>
                    <fullName>배우자외조모사망 ,100000원+3일</fullName>
                </value>
                <value>
                    <fullName>본인형제/자매 사망 ,300000원+3일</fullName>
                </value>
                <value>
                    <fullName>배우자형제/자매 사망 ,300000원+3일</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_Type__c</fullName>
        <description>Leave Type</description>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Support_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Congratulatory Leave</fullName>
                </value>
                <value>
                    <fullName>Condolatory Leave</fullName>
                </value>
                <value>
                    <fullName>Congratulatory  Leave</fullName>
                </value>
                <value>
                    <fullName>Condolatory  Leave</fullName>
                </value>
                <value>
                    <fullName>Congratulatory   Leave</fullName>
                </value>
                <value>
                    <fullName>Condolatory   Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Mobile_Phone__c</fullName>
        <description>Mobile Phone</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Payment__c</fullName>
        <description>Payment</description>
        <label>Payment</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Place__c</fullName>
        <description>Place</description>
        <label>Place</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Replacement__c</fullName>
        <label>Replacement</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Leave_Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>화환</fullName>
                </value>
                <value>
                    <fullName>150000원</fullName>
                </value>
                <value>
                    <fullName>100000원</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Company__c</fullName>
        <description>Requester Company</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Company_Name_MDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Department__c</fullName>
        <description>Requester Department</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_MDM_Department__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_ID__c</fullName>
        <description>Requester Employee No.</description>
        <formula>ASI_eForm_Requester_Record__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Name__c</fullName>
        <description>Requester Name</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c + &apos; &apos;+ ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Congratulatory &amp; Condolatory Requests</relationshipLabel>
        <relationshipName>Congratulatory_Condolatory_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Title__c</fullName>
        <description>Requester Title</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Rice_Wreath__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cash Replacement</description>
        <label>Cash Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Verification</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Summary_Date_From__c</fullName>
        <description>C&amp;C Leave Date (From)</description>
        <label>Leave Date (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Summary_Date_To__c</fullName>
        <description>C&amp;C Leave Date (To)</description>
        <label>Leave Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Support_Type__c</fullName>
        <label>Support Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leave+Money</fullName>
                </value>
                <value>
                    <fullName>Leave</fullName>
                </value>
                <value>
                    <fullName>Money</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sync_to_JDE_Date_c__c</fullName>
        <label>Sync to JDE date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Telephone_No__c</fullName>
        <description>Telephone No.</description>
        <label>Telephone No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Time__c</fullName>
        <description>Time</description>
        <label>Event Date &amp; Time (if Any)</label>
        <type>DateTime</type>
    </fields>
    <label>Congratulatory &amp; Condolatory Request</label>
    <listViews>
        <fullName>ASI_eHR_KOR_CC_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Leave_Type__c</columns>
        <columns>ASI_eForm_Leave_Sub_Type__c</columns>
        <columns>ASI_eForm_Time__c</columns>
        <columns>ASI_eForm_CC_Total_Payment_Amount2__c</columns>
        <columns>ASI_eForm_Support_Type__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_CC_Request__c.ASI_eForm_KR_CC_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>eHR_KOR_CC_Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CC_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Leave_Type__c</columns>
        <columns>ASI_eForm_Leave_Sub_Type__c</columns>
        <columns>ASI_eForm_Time__c</columns>
        <columns>ASI_eForm_CC_Total_Payment_Amount2__c</columns>
        <columns>ASI_eForm_Support_Type__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_CC_Request__c.ASI_eForm_KR_CC_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>eHR_KOR_CC_Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CC_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Leave_Type__c</columns>
        <columns>ASI_eForm_Leave_Sub_Type__c</columns>
        <columns>ASI_eForm_Time__c</columns>
        <columns>ASI_eForm_CC_Total_Payment_Amount2__c</columns>
        <columns>ASI_eForm_Support_Type__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_CC_Request__c.ASI_eForm_KR_CC_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>eHR_KOR_CC_Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_CC_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Leave_Type__c</columns>
        <columns>ASI_eForm_Leave_Sub_Type__c</columns>
        <columns>ASI_eForm_Time__c</columns>
        <columns>ASI_eForm_CC_Total_Payment_Amount2__c</columns>
        <columns>ASI_eForm_Support_Type__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_CC_Request__c.ASI_eForm_KR_CC_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>eHR_KOR_CC_Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Leave_Type__c</columns>
        <columns>ASI_eForm_Leave_Sub_Type__c</columns>
        <columns>ASI_eForm_Time__c</columns>
        <columns>ASI_eForm_CC_Total_Payment_Amount2__c</columns>
        <columns>ASI_eForm_Support_Type__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Sync_to_JDE_Date_c__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>C &amp; C Request Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Congratulatory &amp; Condolatory Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_CC_Request</fullName>
        <active>true</active>
        <label>KR CC Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_checkFieldMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (ISPICKVAL(ASI_eForm_Support_Type__c , &apos;Leave+Money&apos;)|| ISPICKVAL(ASI_eForm_Support_Type__c , &apos;Leave&apos;))&amp;&amp; (  ISNULL(ASI_eForm_Days__c)||ASI_eForm_Days__c=0 ||  ISNULL( ASI_eForm_Summary_Date_From__c )||  ISNULL( ASI_eForm_Summary_Date_To__c ) ) , true, false)</errorConditionFormula>
        <errorMessage>Leave Date (From), Leave Date (To) and No. of days are mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_checkStartEnd</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Summary_Date_From__c    &gt;    ASI_eForm_Summary_Date_To__c</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Summary_Date_To__c</errorDisplayField>
        <errorMessage>End date cannot be earlier than Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_specific_C_C_type_handling</fullName>
        <active>false</active>
        <description>Do not allow saving for the specific C&amp;C type of request.</description>
        <errorConditionFormula>IF(
(ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인결혼(초혼&amp;재혼) ,500000원+6일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인결혼(초혼&amp;재혼) ,500000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인 사망 ,5000000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 사망 ,3000000원+7일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 사망 ,3000000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인 부사망 ,800000원+5일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인 부사망 ,800000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인 모사망 ,800000원+5일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;본인 모사망 ,800000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 부 사망 ,800000원+5일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 부 사망 ,800000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 모 사망 ,800000원+5일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;배우자 모 사망 ,800000원&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;자녀 사망 ,1000000원+5일&apos;)||
ISPICKVAL(ASI_eForm_Leave_Sub_Type__c , &apos;자녀 사망 ,1000000원&apos;)
)
, true, false)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Approval_date__c</errorDisplayField>
        <errorMessage>선택하신 항목은 HR에서 직접 전달 할 예정입니다. 문의 사항 있을 경우 인사부에 연락 주시기 바랍니다. 
The C&amp;C item you just selected will be paid in person by HR team, and if you have any inquiry, please contact HR team.</errorMessage>
    </validationRules>
</CustomObject>